--- a/SportsSideKick/app/src/main/res/values-pt/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-pt/strings.xml
@@ -1,22 +1,22 @@
 <resources>
     <string name="language_current">Polish</string>
-    <string name="wall_fragment_caption">The Wall</string>
-    <string name="video_chat_fragment_caption">Video Chat</string>
-    <string name="news_fragment_caption">News</string>
-    <string name="rumors_fragment_caption">Rumors</string>
-    <string name="shop_fragment_caption">Shop</string>
-
-    <string name="club_radio_caption">Club Radio</string>
-    <string name="club_tv_caption">Club TV</string>
-    <string name="fantasy_caption">Fantasy</string>
-    <string name="statistics_caption">Statistics</string>
-    <string name="chat_caption">Chat</string>
-    <string name="shop_caption">Shop</string>
-    <string name="rumours_caption">Rumours</string>
-    <string name="video_chat_caption">Video Chat</string>
-    <string name="wall_caption">The Wall</string>
+    <string name="wall">The Wall</string>
+    <string name="video_chat">Video Chat</string>
     <string name="news">News</string>
-    <string name="quiz_caption">Quiz</string>
+    <string name="rumours">Rumors</string>
+    <string name="shop">Shop</string>
+
+    <string name="radio">Club Radio</string>
+    <string name="tv">Club TV</string>
+    <string name="fantasy">Fantasy</string>
+    <string name="stats">Statistics</string>
+    <string name="chat">Chat</string>
+    <string name="shop">Shop</string>
+    <string name="rumours">Rumours</string>
+    <string name="video_chat">Video Chat</string>
+    <string name="wall">The Wall</string>
+    <string name="news">News</string>
+    <string name="quiz">Quiz</string>
 
     <string name="member_info">Member info</string>
 
